tests/baselines/reference/stringIndexerAndConstructor1.errors.txt
==== tests/cases/compiler/stringIndexerAndConstructor1.ts (1 errors) ====
    interface I {
        [s: string]: number;
        "": string;
        ~~~~~~~~~~
!!! stringIndexerAndConstructor1.ts(3,5): error TS2171: All named properties must be assignable to string indexer type 'number'.
    }